# HandmadeEngine

./: CMakeLists.txt  CMakePresets.json  dependencies.cmake  make.bat  makeAndRun.bat
HandmadeEngine/: CMakeLists.txt
HandmadeEngine/src/: Shapes.h  main.cpp
include/Platform/: Linux.temp
include/Platform/Windows/: Window.h
src/: main.cpp
src/Platform/Windows/: Window.cpp
